--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,10 +46,12 @@
     "embla-carousel-react": "8.5.1",
     "express": "latest",
     "h3": "latest",
+    "idb-keyval": "^6.2.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-chartjs-2": "latest",
     "react-day-picker": "8.10.1",
